# NVDA-retree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  buildVars.py  manifest.ini  pyproject.toml  requirements-dev.txt  sconstruct
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
addon/doc/en/: readme.html  readme.md
addon/globalPlugins/semanticTree/: __init__.py  facets.py  identity.py  inheritance.py  labels.py  navigator.py  patterns.py  plugin.py  search.py  storage.py  tree.py  updater.py  walker.py
addon/globalPlugins/semanticTree/ui/: __init__.py  assign.py  label.py  search.py  update.py
docs/: developer_guide.md  local_install.md  smoke_test.md
tests/: conftest.py  fakes.py  run.py  test_identity.py  test_inheritance.py  test_labels.py  test_md_to_html.py  test_navigator.py  test_patterns.py  test_search.py  test_search_facets.py  test_storage.py  test_tree.py  test_updater.py
tools/: build_addon.py  md_to_html.py
